--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 			<li><a href="https://www.acfun.cn/">A站</a></li>
 			<li><a href="https://www.bilibili.com/">B站</a></li>
 			<li><a href="https://www.baidu.com/">百度</a></li>
-			<li><a href="https://www.pexels.com/zh-cn/">翻译</a></li>
+			<li><a href="https://fanyi.baidu.com/">翻译</a></li>
 			<li><a href="https://unsplash.com/">unsplash</a></li>
 			<li><a href="https://www.pexels.com/zh-cn/">pexels</a></li>
 			<li><a href="https://www.hellorf.com/">站海</a></li>
-			<li><a href=#>更多</a></li>
+			<li><a href="https://www.hao123.com/">更多</a></li>
 
 		</ul>
 	</div>
