--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>dest</title>
+	<title>阿伟的导航</title>
 	<link rel="stylesheet" href="main.css">
 </head>
 <div class="box">
