--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<span>
 			<h2>个人介绍</h2>
 		</span>
-		<img src="imgs/tx.jpg">
+		<img class="m" src="imgs/tx.jpg">
 		<ul>
 			<li><span>姓名：</span>代伟平</li>
 			<li><span>外号：</span>阿伟，伟哥，伟仔</li>
